--- a/Lab4/CS21B1081_Q3.ipynb
+++ b/Lab4/CS21B1081_Q3.ipynb
@@ -347,35 +347,35 @@
     }
    ],
    "source": [
-    "def prims_mst(adj_matrix):\n",
-    "    num_nodes = len(adj_matrix)\n",
-    "    mst = [None] * num_nodes\n",
-    "    key = [float('inf')] * num_nodes\n",
-    "    visited = [False] * num_nodes\n",
+    "def prims_mst(matrix):\n",
+    "    nodes = len(matrix)\n",
+    "    mst = [None] * nodes\n",
+    "    k = [float('inf')] * nodes\n",
+    "    visited = [False] * nodes\n",
     "\n",
     "    mst[0] = -1\n",
-    "    key[0] = 0\n",
+    "    k[0] = 0\n",
     "\n",
-    "    for _ in range(num_nodes):\n",
-    "        min_key = float('inf')\n",
+    "    for _ in range(nodes):\n",
+    "        min_k = float('inf')\n",
     "        u = -1\n",
     "\n",
-    "        for i in range(num_nodes):\n",
-    "            if not visited[i] and key[i] < min_key:\n",
-    "                min_key = key[i]\n",
+    "        for i in range(nodes):\n",
+    "            if not visited[i] and k[i] < min_k:\n",
+    "                min_k = k[i]\n",
     "                u = i\n",
     "\n",
     "        visited[u] = True\n",
     "\n",
-    "        for v in range(num_nodes):\n",
-    "            if adj_matrix[u][v] and not visited[v] and adj_matrix[u][v] < key[v]:\n",
+    "        for v in range(nodes):\n",
+    "            if matrix[u][v] and not visited[v] and matrix[u][v] < k[v]:\n",
     "                mst[v] = u\n",
-    "                key[v] = adj_matrix[u][v]\n",
+    "                k[v] = matrix[u][v]\n",
     "\n",
-    "    mst_adj_matrix = np.zeros_like(adj_matrix)\n",
-    "    for i in range(1, num_nodes):\n",
+    "    mst_adj_matrix = np.zeros_like(matrix)\n",
+    "    for i in range(1, nodes):\n",
     "        parent = mst[i]\n",
-    "        weight = adj_matrix[i][parent]\n",
+    "        weight = matrix[i][parent]\n",
     "        mst_adj_matrix[parent][i] = weight\n",
     "\n",
     "    return mst_adj_matrix\n",
