--- a/Lab6/CS21B1081_Q2.ipynb
+++ b/Lab6/CS21B1081_Q2.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import sympy as sp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -188,24 +189,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Bayes_classifier(train, test_vector):\n",
+    "def fit_Bayes_classifier(train):\n",
+    "    classes = train['Gender'].unique()\n",
+    "    mean_vector = {}\n",
+    "    cov_matrix = {}\n",
+    "    inv_cov_matrix = {}\n",
+    "    det_cov_matrix = {}\n",
+    "\n",
+    "    for c in classes:\n",
+    "        mean_vector[c] = np.array(train[train['Gender'] == c].iloc[:, 1:].mean())\n",
+    "        cov_matrix[c] = np.array(train[train['Gender'] == c].iloc[:, 1:].cov())\n",
+    "        inv_cov_matrix[c] = np.linalg.inv(cov_matrix[c])\n",
+    "        det_cov_matrix[c] = sp.Matrix(cov_matrix[c]).det()\n",
+    "        print(det_cov_matrix[c])\n",
+    "\n",
+    "    return mean_vector, inv_cov_matrix, det_cov_matrix\n",
+    "\n",
+    "\n",
+    "def Bayes_classifier(train, test_vector, mean_vector, inv_cov_matrix, det_cov_matrix):\n",
     "    classes = train['Gender'].unique()\n",
     "    dim = len(train.columns) - 1\n",
     "    bayes_prob = []\n",
+    "    \n",
     "\n",
     "    for c in classes:\n",
     "        apriori = len(train[train['Gender'] == c]) / len(train)\n",
-    "        mean_vector = np.array(train[train['Gender'] == c].iloc[:, 1:].mean())\n",
-    "        cov_matrix = np.array(train[train['Gender'] == c].iloc[:, 1:].cov())\n",
-    "        inv_cov_matrix = np.linalg.inv(cov_matrix)\n",
-    "        det_cov_matrix = np.linalg.det(cov_matrix)\n",
+    "        \n",
     "        test_vector = np.array(test_vector)\n",
-    "        prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-    "                    np.power(2 * np.pi, dim / 2) * np.power(det_cov_matrix, 0.5))\n",
+    "        prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector[c]).T, inv_cov_matrix[c]), (test_vector - mean_vector[c]))) / (\n",
+    "                    np.power(2 * np.pi, dim / 2) * np.power(det_cov_matrix[c], 0.5))\n",
     "        bayes_prob.append(prob * apriori)\n",
     "\n",
     "    return classes[np.argmax(bayes_prob)]\n",
@@ -215,7 +231,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.51759027713774e-863\n",
+      "4.77521343772887e-864\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_vector, inv_cov_matrix, det_cov_matrix = fit_Bayes_classifier(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -229,63 +263,17 @@
       "3    male      male\n",
       "4    male      male\n",
       "5  female      male\n",
-      "6  female      male\n",
-      "7  female      male\n",
-      "8  female      male\n",
-      "9  female      male\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-      "/tmp/ipykernel_5411/3980949462.py:13: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n"
+      "6  female    female\n",
+      "7  female    female\n",
+      "8  female    female\n",
+      "9  female    female\n"
      ]
     }
    ],
    "source": [
     "predictions = []\n",
     "for i in range(len(test)):\n",
-    "    predictions.append(Bayes_classifier(train, test.iloc[i, 1:]))\n",
+    "    predictions.append(Bayes_classifier(train, test.iloc[i, 1:], mean_vector, inv_cov_matrix, det_cov_matrix))\n",
     "\n",
     "compare = pd.DataFrame({'Actual': test['Gender'], 'Predicted': predictions})\n",
     "\n",
@@ -294,10 +282,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def accuracy(y_pred,y_test):\n",
+    "    return np.sum(y_pred == y_test)/len(y_test)\n",
+    "\n",
+    "print(accuracy(predictions, test['Gender']))"
+   ]
   }
  ],
  "metadata": {
