--- a/Lab6/CS21B1081_Q1.ipynb
+++ b/Lab6/CS21B1081_Q1.ipynb
@@ -129,34 +129,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Bayes_classifier(train, test_vector):\n",
+    "def fit_Bayes_classifier(train):\n",
+    "    classes = train['Species'].unique()\n",
+    "    dim = len(train.columns) - 1\n",
+    "    mean_vector = {}\n",
+    "    cov_matrix = {}\n",
+    "    inv_cov_matrix = {}\n",
+    "    det_cov_matrix = {}\n",
+    "\n",
+    "    for c in classes:\n",
+    "        mean_vector[c] = np.array(train[train['Species'] == c].iloc[:, :dim].mean())\n",
+    "        cov_matrix[c] = np.array(train[train['Species'] == c].iloc[:, :dim].cov())\n",
+    "        inv_cov_matrix[c] = np.linalg.inv(cov_matrix[c])\n",
+    "        det_cov_matrix[c] = np.linalg.det(cov_matrix[c])\n",
+    "\n",
+    "    return mean_vector, inv_cov_matrix, det_cov_matrix\n",
+    "\n",
+    "\n",
+    "def Bayes_classifier(train, test_vector, mean_vector, inv_cov_matrix, det_cov_matrix):\n",
     "    classes = train['Species'].unique()\n",
     "    dim = len(train.columns) - 1\n",
     "    bayes_prob = []\n",
     "\n",
     "    for c in classes:\n",
     "        apriori = len(train[train['Species'] == c]) / len(train)\n",
-    "        mean_vector = np.array(train[train['Species'] == c].iloc[:, :dim].mean())\n",
-    "        cov_matrix = np.array(train[train['Species'] == c].iloc[:, :dim].cov())\n",
-    "        inv_cov_matrix = np.linalg.inv(cov_matrix)\n",
-    "        det_cov_matrix = np.linalg.det(cov_matrix)\n",
     "        test_vector = np.array(test_vector)\n",
-    "        prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector).T, inv_cov_matrix), (test_vector - mean_vector))) / (\n",
-    "                    np.power(2 * np.pi, dim / 2) * np.power(det_cov_matrix, 0.5))\n",
+    "        prob = np.exp(-0.5 * np.dot(np.dot((test_vector - mean_vector[c]).T, inv_cov_matrix[c]), (test_vector - mean_vector[c]))) / (\n",
+    "                    np.power(2 * np.pi, dim / 2) * np.power(det_cov_matrix[c], 0.5))\n",
     "        bayes_prob.append(prob * apriori)\n",
     "\n",
-    "    return classes[np.argmax(bayes_prob)]\n",
-    "        \n",
-    "        "
+    "    return classes[np.argmax(bayes_prob)]        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_vector, inv_cov_matrix, det_cov_matrix = fit_Bayes_classifier(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -198,9 +218,10 @@
     }
    ],
    "source": [
+    "\n",
     "predictions = []\n",
     "for i in range(len(test)):\n",
-    "    predictions.append(Bayes_classifier(train, test.iloc[i, :-1]))\n",
+    "    predictions.append(Bayes_classifier(train, test.iloc[i, :-1], mean_vector, inv_cov_matrix, det_cov_matrix))\n",
     "\n",
     "compare = pd.DataFrame({'Actual': test['Species'], 'Predicted': predictions})\n",
     "\n",
@@ -209,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -226,13 +247,6 @@
     "\n",
     "print(accuracy(predictions, test['Species']))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
