--- a/Lab6/CS21B1081_Q1.ipynb
+++ b/Lab6/CS21B1081_Q1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -129,10 +129,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def covariance_matrix(train):\n",
+    "    dim = len(train.columns) - 1\n",
+    "    data = train.iloc[:, :dim]\n",
+    "    mean_vector = np.array(data.mean())\n",
+    "    centered_data = data - mean_vector\n",
+    "    cov_matrix = np.dot(centered_data.T, centered_data) / (len(train) - 1)\n",
+    "    return cov_matrix\n",
+    "\n",
+    "\n",
     "def fit_Bayes_classifier(train):\n",
     "    classes = train['Species'].unique()\n",
     "    dim = len(train.columns) - 1\n",
@@ -143,7 +152,7 @@
     "\n",
     "    for c in classes:\n",
     "        mean_vector[c] = np.array(train[train['Species'] == c].iloc[:, :dim].mean())\n",
-    "        cov_matrix[c] = np.array(train[train['Species'] == c].iloc[:, :dim].cov())\n",
+    "        cov_matrix[c] = np.array(covariance_matrix(train[train['Species'] == c]))\n",
     "        inv_cov_matrix[c] = np.linalg.inv(cov_matrix[c])\n",
     "        det_cov_matrix[c] = np.linalg.det(cov_matrix[c])\n",
     "\n",
@@ -167,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
