--- a/Lab6/CS21B1081_Q2.ipynb
+++ b/Lab6/CS21B1081_Q2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -189,10 +189,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def covariance_matrix(train):\n",
+    "    data = train.iloc[:, 1:]\n",
+    "    mean_vector = np.array(data.mean())\n",
+    "    centered_data = data - mean_vector\n",
+    "    cov_matrix = np.dot(centered_data.T, centered_data) / (len(train) - 1)\n",
+    "    return cov_matrix\n",
+    "\n",
+    "\n",
     "def fit_Bayes_classifier(train):\n",
     "    classes = train['Gender'].unique()\n",
     "    mean_vector = {}\n",
@@ -202,7 +210,7 @@
     "\n",
     "    for c in classes:\n",
     "        mean_vector[c] = np.array(train[train['Gender'] == c].iloc[:, 1:].mean())\n",
-    "        cov_matrix[c] = np.array(train[train['Gender'] == c].iloc[:, 1:].cov())\n",
+    "        cov_matrix[c] = np.array(covariance_matrix(train[train['Gender'] == c]))\n",
     "        inv_cov_matrix[c] = np.linalg.inv(cov_matrix[c])\n",
     "        det_cov_matrix[c] = sp.Matrix(cov_matrix[c]).det()\n",
     "        print(det_cov_matrix[c])\n",
@@ -229,15 +237,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.51759027713774e-863\n",
-      "4.77521343772887e-864\n"
+      "8.52965353456777e-863\n",
+      "4.77262840089777e-864\n"
      ]
     }
    ],
@@ -247,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
