--- a/Lab7/CS21B1081_Q3.ipynb
+++ b/Lab7/CS21B1081_Q3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,25 +35,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def g_of_x(X, apriori):\n",
-    "    cov = covariance(X)\n",
-    "    inv_cov = np.linalg.inv(cov)\n",
-    "    mean = np.mean(X,axis=0)\n",
-    "    cov_det = np.linalg.det(cov)\n",
-    "\n",
-    "    A = -0.5*inv_cov\n",
-    "    B = inv_cov @ mean\n",
-    "    C = -0.5*mean.T @ inv_cov @ mean - 0.5*np.log(cov_det) + np.log(apriori)\n",
-    "    return lambda x: x.T @ A @ x + B.T @ x + C "
+    "def find_case(w1, w2):\n",
+    "    cov_w1, cov_w2 = covariance(w1), covariance(w2)\n",
+    "    if (cov_w1 == cov_w2).all():\n",
+    "        identity = np.identity(w1.shape[1])\n",
+    "        if ((cov_w1[0, 0] * identity) == cov_w1).all():\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 2\n",
+    "    else:\n",
+    "        return 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def g_of_x(X, apriori,case):\n",
+    "    cov = covariance(X)\n",
+    "    inv_cov = np.linalg.inv(cov)\n",
+    "    mean = np.mean(X,axis=0)\n",
+    "    cov_det = np.linalg.det(inv_cov)\n",
+    "\n",
+    "    if case == 1:\n",
+    "        sigma_sq = cov[0, 0]\n",
+    "        A = np.zeros_like(inv_cov)\n",
+    "        B = mean.T / sigma_sq\n",
+    "        C = -0.5 * mean.T.dot(mean) / sigma_sq + np.log(apriori)\n",
+    "    elif case == 2:\n",
+    "        A = np.zeros_like(inv_cov)\n",
+    "        B = inv_cov.dot(mean)\n",
+    "        C = -0.5 * mean.T.dot(inv_cov).dot(mean) + np.log(apriori)\n",
+    "    elif case == 3:\n",
+    "        A = -0.5 * inv_cov\n",
+    "        B = inv_cov.dot(mean)\n",
+    "        C = -0.5 * mean.T.dot(inv_cov).dot(mean) - 0.5 * np.log(cov_det) + np.log(apriori)\n",
+    "    return lambda x: x.T @ A @ x + B.T @ x + C  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +99,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "g_of_x() missing 1 required positional argument: 'case'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/sujan/Documents/PR-and-ML-Lab/Lab7/CS21B1081_Q3.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/sujan/Documents/PR-and-ML-Lab/Lab7/CS21B1081_Q3.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m g1 \u001b[39m=\u001b[39m g_of_x(w1,\u001b[39m0.5\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/sujan/Documents/PR-and-ML-Lab/Lab7/CS21B1081_Q3.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m g2 \u001b[39m=\u001b[39m g_of_x(w2,\u001b[39m0.5\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: g_of_x() missing 1 required positional argument: 'case'"
+     ]
+    }
+   ],
    "source": [
     "g1 = g_of_x(w1,0.5)\n",
     "g2 = g_of_x(w2,0.5)"
@@ -81,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
