--- a/Lab7/CS21B1081_Q1.ipynb
+++ b/Lab7/CS21B1081_Q1.ipynb
@@ -61,7 +61,7 @@
     "    cov = covariance(X)\n",
     "    inv_cov = np.linalg.inv(cov)\n",
     "    mean = np.mean(X,axis=0)\n",
-    "    cov_det = np.linalg.det(inv_cov)\n",
+    "    cov_det = np.linalg.det(cov)\n",
     "\n",
     "    if case == 1:\n",
     "        sigma_sq = cov[0, 0]\n",
