Lab10 1st question

--- a/Lab10/CS21B1081_Q1.ipynb
+++ b/Lab10/CS21B1081_Q1.ipynb
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LienarSVM"
+    "### LinearSVM"
    ]
   },
   {
@@ -256,8 +256,8 @@
     "    def __init__(self, learning_rate=0.01, max_epochs=1000):\n",
     "        self.learning_rate = learning_rate\n",
     "        self.max_epochs = max_epochs\n",
-    "        self.weights = np.zeros(X.shape[1])\n",
-    "        self.bias = 0\n",
+    "        self.weights = None\n",
+    "        self.bias = None\n",
     "        self.iteration = 1\n",
     "\n",
     "    def activation(self, x):\n",
@@ -265,6 +265,8 @@
     "        \n",
     "\n",
     "    def fit(self, X, Y):\n",
+    "        self.weights = np.zeros(X.shape[1])\n",
+    "        self.bias = 0\n",
     "        for _ in range(self.max_epochs):\n",
     "            for i in range(len(X)):\n",
     "                if Y[i] * (np.dot(self.weights, X[i]) + self.bias) >= 1:\n",
@@ -445,13 +447,7 @@
       "Iteration: 139 | Weights: [1.10162905 1.10162905] | Bias: -1.2000000000000008\n",
       "Iteration: 140 | Weights: [1.10099968 1.10099968] | Bias: -1.2000000000000008\n",
       "Iteration: 141 | Weights: [1.10037513 1.10037513] | Bias: -1.2000000000000008\n",
-      "Iteration: 142 | Weights: [1.10975533 1.10975533] | Bias: -1.2100000000000009\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Iteration: 142 | Weights: [1.10975533 1.10975533] | Bias: -1.2100000000000009\n",
       "Iteration: 143 | Weights: [1.10913462 1.10913462] | Bias: -1.2100000000000009\n",
       "Iteration: 144 | Weights: [1.10851856 1.10851856] | Bias: -1.2100000000000009\n",
       "Iteration: 145 | Weights: [1.10790709 1.10790709] | Bias: -1.2100000000000009\n",
